fixed button position on small devices

--- a/src/components/layouts/UniversalHeader/UniversalHeader.module.scss
+++ b/src/components/layouts/UniversalHeader/UniversalHeader.module.scss
@@ -79,6 +79,9 @@
     width: 100%;
     h3 {
       justify-content: flex-start;
+      button {
+        flex-grow: 1;
+      }
     }
     aside {
       display: none;
